--- a/static/project_files/index.html
+++ b/static/project_files/index.html
@@ -19,8 +19,7 @@
     <!--breadcrumb-->
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Home</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Library</li>
+        pathname
       </ol>
     </nav>
 
