--- a/static/project_files/index.html
+++ b/static/project_files/index.html
@@ -35,19 +35,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-  
-          <td><a href="#"><ion-icon name="folder"></ion-icon>Folder</a></td>
-          <td>27M</td>
-          <td>12/10/2018, 09:00:00 PM</td>
-        </tr>
-        <tr>
-  
-          <td><a href="#"><ion-icon name="document"></ion-icon>file.txt</a></td>
-          <td>4.OK</td>
-          <td>12/10/2018, 09:00:00 PM</td>
-        </tr>
-  
+        mainContent
       </tbody>
     </table>
   </div>
