--- a/static/project_files/index.html
+++ b/static/project_files/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
    <!--custom Css-->
-   <!-- <link rel="stylesheet" href="style.css"> -->
+   <link rel="stylesheet" href="/project_files/style.css">
 
 
 
