--- a/static/project_files/index.html
+++ b/static/project_files/index.html
@@ -26,12 +26,12 @@
     <!--table-->
 <div class="container">
     <table class="table">
-      <thead>
+      <thead id="table_head_row">
         <tr>
   
-          <th scope="col">Name</th>
-          <th scope="col">Size</th>
-          <th scope="col">Last Modified</th>
+          <th scope="col" id="name">Name</th>
+          <th scope="col" id="size">Size</th>
+          <th scope="col" id="time">Last Modified</th>
         </tr>
       </thead>
       <tbody>
@@ -46,9 +46,10 @@
       <span class="text-muted"> <p id="copy">IMC Developers. Copyright &copy; 2010-2015</p></span>
     </div>
   </footer>
-  
+  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
   
       <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+  <script src="project_files/script.js"></script>
